--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
-﻿body {
+﻿@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@1,200&family=Titillium+Web:wght@200&family=Ubuntu:ital,wght@1,300&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Nunito+Sans:ital,wght@1,200&family=Titillium+Web:wght@200&family=Ubuntu:ital,wght@1,300&display=swap');
+
+body {
     height: 100%;
     width: 100%;
-    background-image: url("5_000.jpg");
-    background-size: 70px;
+    background-image: url(img/background.jpeg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
   }
   
   table {
@@ -12,22 +17,24 @@
   
   h1 {
     text-align: center;
-    background-color: #D7DBEA;
     color: #38446B;
+    font-family: 'Dancing Script', cursive;
+    font-size: 60px;
   }
   
   td {
     padding: 10px;
     text-align: center;
-    background-color: #EED3EE;
+    background-color:rgb(238,211,238, 0.3);
     color: #491D49;
     border-radius: 10px;
+    font-family: 'Nunito Sans', sans-serif;;
   }
   
   button {
     font-size: 17px;
     padding: 5px;
-    background-color: #BFEDEF;
+    background-color: #0ee5ec;
     border-radius: 5px;
     border: none;
     color: #1D6E72;
